--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,3 +7,11 @@
 
 // Bootstrap
 @import "~bootstrap-sass/assets/stylesheets/bootstrap";
+
+#admin-page {
+    padding-top: 0px;
+}
+
+.nested-comment{
+    margin-top: 60px;
+}
